refactor(client): update sdk-it
